# flash_attn_metal_cpp

./: CMakeLists.txt  README.md  __init__.py  build.sh  test.py  verify_correctness.py
include/: flash_attn_core.hpp
kernels/: common.metal  flash_attention_fwd.metal  flash_attention_fwd_optimized.metal
python/: bindings.cpp
src/: flash_attn_core.cpp
